Fix Gutenberg alignwide CSS

--- a/assets/scss/compatibilities/gutenberg.scss
+++ b/assets/scss/compatibilities/gutenberg.scss
@@ -12,17 +12,16 @@
 		left: 50%;
 		transform: translate( -50%, 0 );
 		width: calc( 1140px + ( 2 * 25px ) ); // default
-		max-width: calc( 1140px + ( 2 * 25px ) ); // default
+		// max-width: calc( 1140px + ( 2 * 25px ) ); // default
+		max-width: 100vw; // default
 		padding: 0 25px; // default
 
 		@media screen and ( max-width: $breakpoint_768 - 1px ) {
 			padding: 0 20px; // default
-			max-width: calc( 1140px + ( 2 * 20px ) ); // default
 		}
 
 		@media screen and ( max-width: $breakpoint_500 - 1px ) {
 			padding: 0 15px; // default
-			max-width: calc( 1140px + ( 2 * 15px ) ); // default
 		}
 	}
 
@@ -68,16 +67,9 @@
 	&.alignwide {
 		.suki-content-layout-narrow & {
 			width: calc( 1140px + ( 2 * 25px ) + ( 2 * 15px ) ); // default
-			max-width: calc( 1140px + ( 2 * 25px ) + ( 2 * 15px ) ); // default
+			// max-width: calc( 1140px + ( 2 * 25px ) + ( 2 * 15px ) ); // default
+			max-width: calc( 100vw + ( 2 * 15px ) ); // default
 			margin: 0;
-
-			@media screen and ( max-width: $breakpoint_768 - 1px ) {
-				max-width: calc( 1140px + ( 2 * 20px ) + ( 2 * 15px ) ); // default
-			}
-
-			@media screen and ( max-width: $breakpoint_500 - 1px ) {
-				max-width: calc( 1140px + ( 2 * 15px ) + ( 2 * 15px ) ); // default
-			}
 		}
 	}
 
@@ -219,15 +211,7 @@ p.wp-block-subhead {
 			margin-left: 0;
 			margin-right: 0;
 			width: calc( 1140px + ( 2 * 25px ) + ( 2 * 8px ) ); // default
-			max-width: calc( 1140px + ( 2 * 25px ) + ( 2 * 8px ) ); // default
-
-			@media screen and ( max-width: $breakpoint_768 - 1px ) {
-				max-width: calc( 1140px + ( 2 * 20px ) + ( 2 * 8px ) ); // default
-			}
-
-			@media screen and ( max-width: $breakpoint_500 - 1px ) {
-				max-width: calc( 1140px + ( 2 * 15px ) + ( 2 * 8px ) ); // default
-			}
+			max-width: calc( 100vw + ( 2 * 8px ) ); // default
 		}
 	}
 
